[package]
name = "prom_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
kube = { version = "0.96.0", features = ["runtime", "derive", "client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
tokio = { version = "1", features = ["full"] }
tonic = "*"
prost = "*"
tokio-stream = "0.1"
futures = "0.3"

[build-dependencies]
tonic-build = "*"
